# iot-water-managment

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TODO-0.md  TODO-1.md  TODO.md  ci-frontend.yml  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
android-app/: MIT_APP_INVENTOR_GUIDE.md  README.md
apps/android/: TODO.md  TRACKING.md
apps/backend/: README.md  TODO.md  TRACKING.md  contact.js
apps/provisioning-app/: ble-test.html  index.html  mobile-app.html
apps/website/: TODO.md  TRACKING.md  index.html  robots.txt  sitemap.xml
docs/: END_USER_MANUAL.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_CHECKLIST.md  README.md  RUNBOOK.md  TALL_TANK_DEPLOYMENT.md  TODO.md  TRACKING.md  USER_GUIDE.md  WIRING_DIAGRAM.md  architecture_discussion.md
docs/brand/: BRAND_ASSETS.md
docs/business/: CONVERT_TO_PDF.md  FINANCIAL_MODEL.md  INVESTOR_ONEPAGER.md  INVESTOR_PITCH.md  INVESTOR_ROADMAP.md  PRODUCTION_COST_ANALYSIS.md  SUBSCRIPTION_TODO.md
docs/deployment/: AWS_DEPLOYMENT_GUIDE.md
docs/developer/: LINEAR_INTEGRATION.md
docs/hardware/: ASSEMBLY_GUIDE.md  JLCPCB_ORDER_GUIDE.md  PCB_DESIGN.md  WIRING_DIAGRAMS.md
docs/installation/: ASSEMBLY_GUIDE.md  CALIBRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  OVERHEAD_TANK_SETUP.md  WIRING_DIAGRAM.md
docs/legal/: COPYRIGHT_NOTICE.md  DESIGN_REGISTRATION_READY.md  IP_PROTECTION_GUIDE.md  NDA_TEMPLATE.md  README.md  TRADEMARK_FILING_READY.md
docs/marketing/: COMPETITIVE_ANALYSIS.md  MARKETING_BROCHURE.md  MARKETING_DEALER_KIT.md  PRICING_STRATEGY.md  SOCIAL_MEDIA_VIDEO_GUIDE.md  THREAT_MITIGATION.md
docs/technical/: BOM.md
docs/user/: END_USER_MANUAL.md  END_USER_MANUAL_HINGLISH.md  USER_GUIDE.md
firmware/: BUGFIX_CHECKLIST.md  CHANGELOG.md  CODE_REVIEW_FINAL.md  FEATURE_LIST.md  FIRMWARE_ANALYSIS_REPORT.md  PR_SUMMARY.md  README.md  RELEASE_NOTES_v1.0.0.md  TODO.md  TRACKING.md
firmware/controller_node/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32h2
firmware/docs/: QUICK_SUMMARY.md  README.md
firmware/router_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2
firmware/sensor_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2
firmware/shared/: zigbee_protocol.h
firmware/test_esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/test_native/: README.md  run_tests.bat  run_tests.ps1  test_all.c  test_all.js
firmware/unified/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2
frontend/: index.html
hardware/: README.md  TODO.md  TRACKING.md
hardware/docs/: BOM_OPTIMIZATION.md  TEST_PROCEDURES.md
hardware/enclosure/: README.md  controller_node_enclosure.scad  controller_node_enclosure.stl  router_node_enclosure.scad  router_node_enclosure.stl  sensor_node_enclosure.scad  sensor_node_enclosure.stl
hardware/kicad/: README.md
hardware/manufacturing/: README.md  controller_node_bom.csv  controller_node_cpl.csv  kit_accessories_bom.csv  router_node_bom.csv  router_node_cpl.csv  sensor_node_bom.csv  sensor_node_cpl.csv
hardware/packaging/: product_box_design.md
main/: CMakeLists.txt  arduino_compat.h  idf_component.yml  main.cpp  radio_spinel_stub.c  zigbee_ino_wrapper.cpp
marketing/: TODO.md  TRACKING.md
marketing/docs/: MARKETING_ONEPAGER.md
provisioning-app/: README.md
scripts/: convert-business-docs-to-pdf.ps1  convert-md-to-pdf-simple.ps1  convert-to-pdf.bat  deploy-to-s3.ps1
tools/: TODO.md  TRACKING.md
website/: FIXES_APPLIED.md  QUICK_FIX_GUIDE.md
website/app/: index.html  manifest.json
website/components/: footer.html  (+1 more)
zigbee_water_management/: README.md  config.h  zigbee_config.cpp  zigbee_config.h  zigbee_water_management.ino
(+53 files in other folders)
